finished the documantation

--- a/portfolio_app/static/portfolio_v1/assets/css/my_style.css
+++ b/portfolio_app/static/portfolio_v1/assets/css/my_style.css
@@ -117,7 +117,8 @@ body {
 .nav-clicked:hover {
     background-color: grey !important;
     padding: 10px;
-    transition: transform 450ms;
+    transition: transform 1000ms;
+    transition-delay: inherit;
 }
 
 .nav-clicked:focus {
