--- a/templates/main/footer.html
+++ b/templates/main/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 <footer class="footer footer-big text-light my_footer_color "
-        style="background-color: rgba(0,0,0,0.9)!important;color: white !important;">
+        style="background-color: rgba(0,0,0,0.9)!important;color: white !important;margin-bottom: 0vh !important;">
     <div class="container text-light">
 
         <div class="content ">
