--- a/templates/portfolio_v1/portfolio.html
+++ b/templates/portfolio_v1/portfolio.html
@@ -19,8 +19,8 @@
             <div class="col-12 ">
                 <div class="profile-tabs">
                     <div class="nav-align-center">
-                        <ul class=" nav nav-pills  nav-pills-icons  my_nav_display {% if layout.background_color == 'light' %} dark-about
-                        {% elif layout.background_color == 'dark' %} secondary_color
+                        <ul class=" nav nav-pills  nav-pills-icons  my_nav_display {% if layout.background_color == 'light' %} secondary_color
+                        {% elif layout.background_color == 'dark' %} dark-about
                         {% endif %} " role="tablist" style="">
 
                             {% if project.count > 0 %}
