--- a/templates/portfolio_v1/skills.html
+++ b/templates/portfolio_v1/skills.html
@@ -39,8 +39,8 @@
                             <div class="col-md-8 mx-auto" style="">
                                 <!--progress bar single-->
                                 <div class="" style="display: flex;justify-content: space-between">
-                                    <h3 class=" secondary_color">  {% if item.icon %}
-                                        {{ item.icon.as_html }}
+                                    <h3 class=" secondary_color">  {% if skill.icon %}
+                                        {{ skill.icon.as_html }}
                                     {% endif %}{{ skill.name }}</h3>
                                     <h3 class=" secondary_color "
                                         style="font-weight: bolder">{{ skill.percent }}%</h3>
