--- a/templates/portfolio_v2/project.html
+++ b/templates/portfolio_v2/project.html
@@ -1,9 +1,10 @@
 <div class="dark_background">
     <div class="projects-3 dark_background" id="projects-3">
 
-        <h2 class="dark_background font-weight-bold  font-italic  title text-center"
+        <h2 class="secondary_color_dark dark_background font-weight-bold  font-italic  title text-center"
             style="margin-bottom:  2px;">
-            Portfolio
+            <strong>Portfolio</strong>
+
         </h2>
         <div class="container" id="Portfolio">
 
