--- a/templates/portfolio_v4/about.html
+++ b/templates/portfolio_v4/about.html
@@ -59,7 +59,8 @@
                 </div>
 
                 <!-- link starts -->
-                <a href="#" class="primary_color secondary_color dtr-btn btn-blue dtr-mt-30">Download CV <i
+                <a href="#" class="primary_color secondary_color dtr-btn btn-blue dtr-mt-30"
+                   style="color: white!important;">Download CV <i
                         class="icon-chevron-compact-right"></i></a></div>
             <!-- column 2 ends -->
 
