--- a/templates/portfolio_v4/blog.html
+++ b/templates/portfolio_v4/blog.html
@@ -1,3 +1,4 @@
+{% load hosts %}
 {% load static %}
 <section id="blog" class="dark_background dtr-section dtr-py-100">
     <div class="container">
@@ -20,14 +21,16 @@
                     <div class="dtr-blog-item">
                         <!-- image -->
                         <div class="dtr-post-img"><img src="{{ item.imageURL }}" alt="image"><span
-                                class="secondary_color primary_color dtr-category bg-blue color-white">{{ item.get_category_display }}</span></div>
+                                class="secondary_color primary_color dtr-category bg-blue color-white" style="color: white!important;">{{ item.get_category_display }}</span>
+                        </div>
                         <div class="dtr-post-content">
                             <ul class="secondary_color dtr-blog-meta color-grey">
                                 <li>{{ item.published_date }}</li>
                                 <li>by {{ item.user.username }}</li>
                             </ul>
                             <h5 class="secondary_color">{{ item.title }}</h5>
-                            <a href="{% url 'blog:blog_detail' item.slug %}" class="secondary_color dtr-read-more">Continue Reading</a>
+                            <a href="{% host_url 'blog:blog_detail' item.slug host 'www' %}"
+                               class="secondary_color dtr-read-more">Continue Reading</a>
                         </div>
                     </div>
                     <!-- blog item 1 ends -->
@@ -41,7 +44,9 @@
         </div>
         <div class="row mt-5 pt-5">
             <div class="col-5 col-sm-offset-3 mx-auto">
-                <button class="brn btn-linkedin align-content-center justify-content-center">View more</button>
+                <a href="{% host_url 'blog:blog_list' host 'www' %}"
+                   class="primary_color secondary_color dtr-btn btn-blue dtr-mt-30"
+                   style="color: white!important;">View more</a>
             </div>
         </div>
         <!--== row starts ==-->
