--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{% load hosts %}
 
 {% load i18n %}
 
@@ -20,7 +21,9 @@
                 {% endif %}
                 <button type="submit" class="btn btn-danger btn-round ">{% trans 'Sign Out' %}</button>
             </form>
-            <a href="{% url 'portfolio:portfolio' request.user.username %}" class="btn btn-outline-primary">Go back</a>
+            <a href="{% url 'portfolio:portfolio'  request.user.username %}" class="btn btn-outline-primary">View
+                portfolio</a>
+            <a href="{% url 'portfolio:home' %}" class="btn btn-outline-primary">Home page</a>
         </div>
     </div>
 {% endblock %}
