--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% fontawesome_5_static %}
+
     <meta charset="UTF-8">
     <meta name="author" content="Nile-Theme">
     <meta name="robots" content="index follow">
@@ -13,7 +13,9 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Muli:800%7CPoppins:300i,300,400,500,600,700,400i,500%7CPlayfair+Display:400,700,900"
           rel="stylesheet">
-    {#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>#}
+
+    <link type="text/css" rel="stylesheet" href="{% static 'lightbox/css/lightgallery.css' %}"/>
+    {% fontawesome_5_static %}
     <link rel="stylesheet" href="{% static 'portfolio_v1/assets/fonts/font-awesome/css/font-awesome.min.css' %}">
 
     <title>
@@ -21,16 +23,8 @@
             {{ request.user.username }}-profile
         {% endblock title %}
     </title>
-
-    {# the styles #}
-
     <link href="{% static 'portfolio_v1/assets/css/my_style.css' %}" rel="stylesheet' %}"/>
-
-
     <link href="{% static 'portfolio_app/assets/css/material-dashboard.css' %}" rel="stylesheet"/>
-    {% block head_extra %}
-
-    {% endblock %}
 
 </head>
 <body>
@@ -66,6 +60,17 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item ">
+                                <a class="nav-link" href="{% url 'profile:dashboard' %}">
+                                    <span class="tim-note">Documentation </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav-item  active">
+                    <div class="collapse show" id="pagesExamples">
+                        <ul class="nav">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="{% url 'profile:userUpdate' %}">
                                     <span class="tim-note"> Name </span>
                                 </a>
@@ -73,6 +78,7 @@
                         </ul>
                     </div>
                 </li>
+
                 <li class="nav-item  ">
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
@@ -206,6 +212,7 @@
 
         {% block panel %}
 
+            {% include 'dashboard/documentation.html' %}
         {% endblock panel %}
         {% include 'main/footer.html' %}
 
@@ -218,22 +225,37 @@
 <!--   Core JS Files   -->
 <script src="{% static 'portfolio_v2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
 
-<!-- A jQuery plugin that adds cross-browser mouse wheel support. (Optional) -->
+<!-- A jQuery plugin that adds cross-browser mouse wheel su
+
+
+pport. (Optional) -->
 <script src="{% static 'lightbox/js/jquery.mousewheel.min.js' %}"></script>
-
-{#<script src="{% static 'lightbox/js/lightgallery.min.js' %}"></script>#}
-<script src="{% static 'lightbox/js/lightgallery.js' %}"></script>
-
 <!-- lightgallery plugins -->
 <script src="{% static 'lightbox/js/lg-thumbnail.min.js' %}"></script>
 <script src="{% static 'lightbox/js/lg-fullscreen.min.js' %}"></script>
 
+<script src="{% static 'lightbox/js/picturefill.min.js' %}"></script>
+<script src="{% static 'lightbox/js/lightgallery.js' %}"></script>
+<script src="{% static 'lightbox/js/lg-pager.js' %}"></script>
+<script src="{% static 'lightbox/js/lg-autoplay.js' %}"></script>
+<script src="{% static 'lightbox/js/lg-zoom.js' %}"></script>
+<script src="{% static 'lightbox/js/lg-share.js' %}"></script>
+<script src="{% static 'lightbox/js/lg-rotate.js' %}"></script>
 <script>
+    {#lightGallery (document.getElementById ('lightgallery'));#}
+</script>
+<script>
+    $ ('#lightgallery').lightGallery ({
+        {#selector: '.gallery-item' ,#}
+        mode: 'lg-fade'
+    });
     $ ('.captions').lightGallery ({
-        selector: '.gallery-item'
+        {#selector: '.gallery-item' ,#}
+        mode: 'lg-fade'
     });
 
 </script>
+
 
 <script src="{% static 'portfolio_app/assets/js/core/popper.min.js' %}"></script>
 <script src="{% static 'portfolio_app/assets/js/core/bootstrap-material-design.min.js' %}"></script>
