--- a/templates/dashboard/navbar.html
+++ b/templates/dashboard/navbar.html
@@ -8,7 +8,6 @@
                         <img class="photo" style="height: 41px;width: 41px !important;"
                              src="{{ request.user.profile.profilePicsImageURL }}" alt="profile pics">
                     </div>
-                    <i class="material-icons design_bullet-list-67 visible-on-sidebar-mini">view_list</i>
                 </button>
             </div>
             <a class="navbar-brand" href="javascript:;">{{ request.user.first_name }}
@@ -39,10 +38,10 @@
     </div>
 
 </nav>
-<div class="container-fluid mt-5 pt-5">
+<div class="container-fluid ">
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-5" role="alert">
                 {{ message }}
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
