--- a/templates/main/blog/home_page.html
+++ b/templates/main/blog/home_page.html
@@ -38,14 +38,31 @@
                                         <h4>Get the best portfolio for free for any occupation and choose what you like
                                             most</h4>
                                         <br>
-                                        <h6>Create your account now:</h6>
+                                        {% if not request.user.is_authenticated %}
+                                            <h6>Create your account now:</h6>
+                                        {% else %}
+                                            View your dashboard
+                                        {% endif %}
+
                                         <div class="buttons">
-                                            <a href="{% url 'account_login' %}" class="btn btn-primary btn-lg">
-                                                Sign in
-                                            </a>
-                                            <a href="{% url 'account_signup' %}" class="btn btn-primary btn-lg">
-                                                Sign Up
-                                            </a>
+                                            {% if not request.user.is_authenticated %}
+                                                <a href="{% url 'account_login' %}" class="btn btn-primary btn-lg">
+                                                    Sign in
+                                                </a>
+                                                <a href="{% url 'account_signup' %}" class="btn btn-primary btn-lg">
+                                                    Sign Up
+                                                </a>
+                                            {% else %}
+                                                <a href="{% url 'profile:profileUpdate' %}"
+                                                   class="btn btn-primary btn-lg">
+                                                    Dashboard
+                                                </a>
+                                                <a href="{% url 'account_logout' %}" class="btn btn-primary btn-lg">
+                                                    Logout
+                                                </a>
+
+                                            {% endif %}
+
 
                                         </div>
 
@@ -56,7 +73,8 @@
 
                     </div>
                     <div class="item">
-                        <div class="page-header header-filter" style="background-image: url({% static 'main/image/blog_post_background.jpg' %});">
+                        <div class="page-header header-filter"
+                             style="background-image: url({% static 'main/image/blog_post_background.jpg' %});">
 
                             <div class="container">
                                 <div class="row">
@@ -89,7 +107,8 @@
                     </div>
 
                     <div class="item">
-                        <div class="page-header header-filter" style="background-image: url({% static 'main/image/blog_post_background.jpg' %});">
+                        <div class="page-header header-filter"
+                             style="background-image: url({% static 'main/image/blog_post_background.jpg' %});">
 
                             <div class="container">
                                 <div class="row">
@@ -140,9 +159,29 @@
         <div id="about" class="container ">
             <div class="section text-center">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2 class="black_font title">Get the best</h2>
-                        <h5 class="description">.</h5>
+                    <div class="col-md-12">
+                        <h2 class="black_font title"><strong>About Us</strong></h2>
+                        <h3 class="text-left description"><strong> Dynamic portfolio is a web that enable you to crate
+                            your
+                            portfolio without stress you dont need to pay
+                            before getting you subdomain we provide you every thing you need to advertise your self
+                            ...</strong></h3>
+                        <p class="text-left font-weight-bold text-muted">
+                        <h4 class="text-left font-weight-bold text-muted"><strong>
+                            You dont need stress just create your account and by signing up <a
+                                href="{% url 'account_signup' %}">here</a> or login if you already have an account
+                            <a
+                                    href="{% url 'account_login' %}">Login</a>
+                            and follow the steps once
+                            you have
+                            signed up
+                            you would be redirect to you dahsboard where you would have to update your portfolio and
+                            choose the portfolio that suite you you can change the text color , background color
+                            ,background image and so on until you are satisfied .. enjoy
+                            and you also have acces to creating your own blog on your portfolio you can help us by
+                            writing blog post it advertises you and also advertise yourself in you
+                            profiession</strong></h4>
+                        </p>
                     </div>
                 </div>
 
@@ -150,79 +189,9 @@
             </div>
 
 
-            <div id="contact" class="section section-contacts">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2 class="black_font text-center title">Contact us</h2>
-                        <h4 class="black_font text-center description">If you have any information on how to update this
-                            website or
-                            would
-                            like to work with us please we would like to know .</h4>
-
-                        <form class=" p-5 m-5contact-form p-5" action="{% url 'user:contact_admin' %}" method="post">
-                            {% csrf_token %}
-                            <div class="row">
-                                <div class="col-10 mx-auto">
-                                    <div class="form-group label-floating is-empty">
-                                        <label class="black_font" for="id_contact_name">Name</label>
-                                        <input type="text" name="contact_name"
-                                               placeholder="Name"
-                                               maxlength="50"
-                                               id="id_contact_name"
-                                               class="form-control">
-                                        <span class="material-input"></span></div>
-                                </div>
-                                <div class="col-10 mx-auto">
-                                    <div class="black_font form-group label-floating is-empty">
-                                        <label class="black_font" for="id_contact_email">Email</label>
-                                        <input type="email"
-                                               name="contact_email"
-                                               placeholder="Email"
-                                               id="id_contact_email"
-                                               class="form-control">
-                                        <span class="material-input"></span></div>
-                                </div>
-                                <div class="col-10 mt-5 mx-auto">
-                                    <div class="form-group label-floating is-empty">
-                                        <label class="black_font" for="id_contact_subject">Subject</label>
-                                        <input type="text"
-                                               name="contact_subject"
-                                               maxlength="200"
-                                               placeholder="Subject"
-                                               id="id_contact_subject"
-                                               class="form-control">
-                                        <span class="material-input"></span></div>
-                                </div>
-                                <div class="col-10 mt-5 mx-auto">
-                                    <div class="form-group label-floating is-empty">
-                                        <label class="black_font" for="id_contact_message">Message</label>
-                                        <textarea class="form-control"
-                                                  maxlength="1000"
-                                                  name="contact_message"
-                                                  placeholder="Message"
-                                                  id="id_contact_message"
-                                                  rows="4"></textarea>
-                                        <span class="material-input"></span></div>
-                                </div>
-                            </div>
-
-
-                            <div class="row">
-                                <div class="col-md-4 col-md-offset-4 text-center">
-                                    <button class="btn btn-primary btn-raised">
-                                        Send Message
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
         </div>
 
     </div>
-
 
 
 {% endblock %}
