--- a/templates/main/blog/latest_post.html
+++ b/templates/main/blog/latest_post.html
@@ -5,11 +5,11 @@
 
         {% for post in latest_posts %}
 
-            <div class="col-md-4">
+            <div class="col-xs-8 col-xs-offset-2 col-sm-8 col-sm-offset-2 col-md-4 col-lg-4 mx-auto">
                 <div class="card card-plain card-blog">
                     <div class="card-image">
                         <a href="{% url 'blog:blog_detail' post.slug %}">
-                            <img class=" img-raised" src="{{ post.imageURL }}"/>
+                            <img class=" img-raised" src="{{ post.imageURL }}" style="max-height: 20vh !important;"/>
                         </a>
                     </div>
 
