--- a/templates/portfolio_v2/contact.html
+++ b/templates/portfolio_v2/contact.html
@@ -2,136 +2,151 @@
 {% load static %}
 
 
-<div class="dark_background">
-    <div class="dark_background contactus-1  remove_m_p contact_background_image"
-         id="Contact">
-        <section class="dark_background contact_background">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <h2 class="title secondary_color">Get in Touch</h2>
-                        <div class="info info-horizontal">
-                            <div class="icon icon-primary">
-                                <i class="fa-search-location secondary_color"></i>
+<div class=" contactus-1  remove_m_p contact_background_image"
+     id="Contact">
+    <section class=" dark_background_rgba">
+        <div class="container">
+            <div class="row">
+                <div class=" col-md-5">
+                    <h2 class="title secondary_color">Get in Touch</h2>
+                    <div class="info info-horizontal">
+                        <div class="icon icon-primary">
+                            <i class="fa-search-location secondary_color"></i>
+                        </div>
+                        {% if profile.address %}
+                            <div class="description secondary_color">
+                                <h4 class="info-title secondary_color">Find us at the office</h4>
+                                <p>{{ profile.address }}
+                                </p>
                             </div>
-                            {% if profile.address %}
-                                <div class="description secondary_color">
-                                    <h4 class="info-title secondary_color">Find us at the office</h4>
-                                    <p>{{ profile.address }}
-                                    </p>
-                                </div>
-                            {% endif %}
-                            <div class="col-12">
-                                <div class="row">
-                                    <div class="col-8 mx-auto secondary_color text-small ">
-                                        <a href={{ profile.twitter }} target="_blank"
-                                           class="btn btn-just-icon  btn-simple  secondary_color">
-                                            twitter<i class="fa fa-twitter"></i>
-                                        </a>
-                                        <a href={{ profile.facebook }} target="_blank"
-                                           class="btn btn-just-icon  btn-simple  secondary_color text-capitalize">
-                                            facebook <i class="fa fa-facebook-square"></i>
-                                        </a>
-                                        <a href={{ profile.linkedin }}   target="_blank"
-                                           class="btn btn-just-icon btn-simple ml-5  secondary_color">
-                                            LinkedIn<i class="fa fa-linkedin-square"></i>
-                                        </a>
-                                        <h4 class="info-title secondary_color">Give {{ profile.user.username }} a
-                                            ring</h4>
-                                        <p class="font-weight-700 secondary_color"> {{ profile.user.first_name }} {{ profile.user.last_name }}<br>
-                                            {{ profile.phone_number }}<br>
-                                        </p>
+                        {% endif %}
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col-12 mx-auto secondary_color_dark text-small ">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href={{ profile.twitter }} target="_blank"
+                                               class="btn-simple  secondary_color">
+                                                twitter<i class="fa fa-twitter fa-2x"></i>
+                                            </a>
+                                            <a href={{ profile.facebook }} target="_blank"
+                                               class=" btn-simple  secondary_color text-capitalize  ">
+                                                facebook <i class="fa fa-facebook-square  fa-2x"></i>
+                                            </a>
+                                            <a href={{ profile.linkedin }}   target="_blank"
+                                               class=" btn-simple ml-5  secondary_color ">
+                                                LinkedIn<i class="fa fa-linkedin-square   fa-2x"></i>
+                                            </a>
+                                        </div>
+
+
                                     </div>
+                                    <h2 class="secondary_color_dark info-title secondary_color">
+                                        Give <strong>{{ profile.user.first_name }} {{ profile.user.last_name }}</strong>
+                                        a
+                                        ring</h2>
+                                    <h3 class="secondary_color_dark font-weight-700 secondary_color">
+                                        {{ profile.phone_number }}<br>
+                                    </h3>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                    <div class="col-md-5 col-md-offset-2">
-                        <div class="card card-contact ">
-                            <form role="form" action="{%  host_url 'user:contact_user' host 'www' %}{% comment %}{% url 'user:contact_user' %}{% endcomment %}" id="contact-form"
-                                  onsubmit="SubmitForm" method="post">
 
-                                {% csrf_token %}
-                                <div class="header header-raised  text-center"
-                                     style="background-color: {{ layout.primary_color }}!important;">
-                                    <h4 class="card-title">Contact Us</h4>
-                                </div>
-                                <div class="card-content">
-                                    <div class="row">
-                                        <input type="hidden" name="to_email" id="id_to_email"
-                                               value="{{ profile.user.email }}">
+                </div>
+                <div class="col-md-7 mx-auto{% comment %}col-md-offset-2{% endcomment %}">
+                    <div class="dark_background_rgba secondary_color_dark card card-contact ">
+                        <form role="form" action="{% host_url 'user:contact_user' host 'www' %}" id="contact-form"
+                              class="submit-form " method="post">
 
-                                        <div class="col-md-6">
-                                            <div class="form-group label-floating is-empty"
-                                                 id="div_id_contact_name">
-                                                <label class="control-label" for="id_contact_name"> Name</label>
-                                                <input type="text" name="contact_name" class="form-control"
-                                                       maxlength="200" required id="id_contact_name">
-                                                <span class="material-input"></span></div>
-                                        </div>
+                            {% csrf_token %}
+                            <div class="header header-raised  text-center"
+                                 style="background-color: {{ layout.primary_color }}!important;">
+                                <h4 class="card-title">Contact Us</h4>
+                            </div>
+                            <div class="card-content">
+                                <div class="row">
+                                    <input type="hidden" name="to_email" id="id_to_email"
+                                           value="{{ profile.user.email }}">
+                                    <input type="hidden" name="url" value="{{ host_url }}">
 
-                                        <div class="col-md-6">
-                                            <div class="form-group label-floating is-empty"
-                                                 id="div_id_contact_email" for="id_contact_email">
-                                                <label class="control-label  requiredField"
-                                                       id="div_id_contact_email">Email</label>
-                                                <input type="email" name="id_contact_email" maxlength="200"
-                                                       class="form-control emailinput" required>
-                                                <span class="material-input"></span></div>
-                                        </div>
-
-                                        <div class="col-md-12">
-                                            <div class="form-group label-floating is-empty requiredField"
-                                                 id="div_id_contact_subject">
-
-                                                <label class="control-label" for="id_contact_subject"> Name</label>
-                                                <input type="text" name="contact_subject" class="form-control"
-                                                       maxlength="200" required id="id_contact_subject">
-                                                <span class="material-input"></span></div>
-                                        </div>
-
+                                    <div class="col-md-6">
+                                        <div class="form-group label-floating is-empty requiredField"
+                                             id="div_id_contact_name">
+                                            <input type="text" name="contact_name"
+                                                   placeholder=" Full name "
+                                                   class="secondary_color_dark form-control"
+                                                   maxlength="200" required id="id_contact_name">
+                                            <span class="material-input"></span></div>
                                     </div>
 
+                                    <div class="col-md-6">
+                                        <div class="form-group label-floating is-empty requiredField"
+                                             id="div_id_contact_email">
+                                            <input type="email" name="contact_email" maxlength="200"
+                                                   id="id_contact_email"
+                                                   placeholder=" Email "
+                                                   class="secondary_color_dark form-control emailinput" required>
+                                            <span class="material-input"></span></div>
+                                    </div>
+                                </div>
 
-                                    <div class="form-group label-floating is-empty  requiredField">
-                                        <label class="control-label" for="id_contact_message"></label>
-                                        <textarea name="contact_message" placeholder=" message "
-                                                  class="form-control" id="message" rows="6"
-                                                  id="id_contact_message" required></textarea>
-                                        <span class="material-input"></span></div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group label-floating is-empty requiredField"
+                                             id="div_id_contact_subject">
 
-
-                                    <input type="hidden" name="to_email" placeholder="Your Email "
-                                           class="form-control shadow d-none" value={{ profile.user.email }}
-                                                   id="id_to_email">
-
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="checkbox">
-                                                <label>
-                                                    <input type="checkbox" name="optionsCheckboxes"><span
-                                                        class="checkbox-material"><span class="check"></span></span>
-                                                    I'm not a robot
-                                                </label>
+                                            <input type="text" name="contact_subject"
+                                                   placeholder=" subject  "
+                                                   class="secondary_color_dark form-control"
+                                                   maxlength="200" required id="id_contact_subject">
+                                            <span class="material-input"></span></div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="col-8">
+                                            <div class="form-group label-floating is-empty  requiredField">
+                                                <div class="form-group label-floating is-empty requiredField"
+                                                     id="div_id_contact_message">
+                                    <textarea name="contact_message" placeholder=" message "
+                                              class="secondary_color_dark form-control" rows="6"
+                                              id="id_contact_message" required></textarea>
+                                                    <span class="material-input"></span>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="col-md-6">
-                                            <button type="submit" class="btn btn-primary pull-right"
-                                                    style="background-color: {{ layout.primary_color }}!important;">
-                                                Send
-                                                Message
-                                            </button>
-                                        </div>
                                     </div>
                                 </div>
+                            </div>
 
-                            </form>
-                        </div>
+
+                            <input type="hidden" name="to_email" placeholder="{{ profile.user.username }} Email "
+                                   class="form-control shadow d-none" value={{ profile.user.email }}
+                                           id="id_to_email">
+
+                            <div class="row">
+                                <div class="col-md-4 ml-5">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="optionsCheckboxes"><span
+                                                class="checkbox-material"><span class="check"></span></span>
+                                            I'm not a robot
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-md-5">
+                                    <button type="submit" class="btn btn-primary pull-right float-right"
+                                            style="background-color: {{ layout.primary_color }}!important;">
+                                        Send
+                                        Message
+                                    </button>
+                                </div>
+                            </div>
+
+                        </form>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </div>
 
