--- a/templates/portfolio_v2/materiali_kit_js.html
+++ b/templates/portfolio_v2/materiali_kit_js.html
@@ -1,7 +1,8 @@
 {% load static %}
 <!--   Core JS Files   -->
-<script src="{% static 'portfolio_v2/assets/js/material.min.js' %}"></script>
+<script src="{% static 'portfolio_v2/assets/js/material-kit.js' %}"></script>
 <script src="{% static 'portfolio_v2/assets/js/jquery.min.js' %}" type="text/javascript"></script>
+
 <script src="{% static 'portfolio_v2/assets/js/bootstrap.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'owlCarousel/js/owl.carousel.min.js' %}" type="text/javascript"></script>
 
@@ -73,13 +74,20 @@
         test_item = 5
     }
 
+    let test_count_begin = 0
+    if (test_count === 1) {
+        test_count_begin = 1
+    } else if (test_count > 1 || test_count === 2) {
+        test_count_begin = 2
+    }
+
     $ ('.owl-carousel').owlCarousel ({
         loop: true ,
         margin: 10 ,
         nav: true ,
         responsive: {
             0: {
-                items: 2
+                items: test_count_begin
             } ,
             600: {
                 items: test_item_600
