--- a/templates/portfolio_v2/navbar.html
+++ b/templates/portfolio_v2/navbar.html
@@ -1,5 +1,5 @@
 {% load hosts %}
-<nav class="navbar navbar-dark   navbar-fixed-top ">
+<nav class="primary_color_nav navbar navbar- navbar-fixed-top   ">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -9,13 +9,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand secondary_color" href="#">Dynamic portfolio</a>
+            <a class="navbar-brand " href="#">Dynamic portfolio</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="navigation-example">
+        <div class="primary_color_nav collapse navbar-collapse" id="navigation-example">
             <ul class="nav navbar-nav navbar-right ">
                 <li>
-                    <a href="#Home">
+                    <a href="#Home" class="primary_color_nav">
                         Home
                     </a>
                 </li>
@@ -43,12 +43,10 @@
                     <li>
                         <a href="{% host_url 'profile:dashboard' host 'www' %}">
                             Dashboard
-                        </a>{% comment %}    <a href="{% url 'profile:dashboard' %}">
-                            Dashboard
-                        </a>{% endcomment %}
+                        </a>
                     </li>
                     <li>
-                        <a href="{% url 'account_logout' %}">
+                        <a href="{% host_url 'account_logout' host 'www' %}">
                             Logout
                         </a>
                     </li>
