--- a/templates/portfolio_v2/services.html
+++ b/templates/portfolio_v2/services.html
@@ -1,12 +1,11 @@
 {% load static %}
-<div class="dark_background">
 <section class="services_height "
          style="background-image: url('{{ profile.backgroundImageURL }}');background-attachment: fixed ">
-    <section class="dark_background " style="background-size: cover;min-height: 50vh">
+    <section class="dark_background_rgba " style="background-size: cover;min-height: 50vh">
         <div class=" container">
             <div class="row">
                 <div class="col">
-                    <h1 class="display-3 font-italic">Service </h1>
+                    <h1 class="secondary_color_dark display-3 font-italic"><strong>Service</strong></h1>
                 </div>
             </div>
 
@@ -18,7 +17,7 @@
                                 <img class="my_service_image" src="{{ item.imageURL }}" alt="{{ item.name }}">
                             </div>
 
-                            <h3 class="font-weight-bold secondary_color  ">{{ item.name }}</h3>
+                            <h3 class="font-weight-bold secondary_color  "><strong>{{ item.name }}</strong></h3>
                             <p class=" text-muted">
                                 {{ item.description|truncatechars:500 }}</p>
                         </div>
@@ -33,4 +32,3 @@
 
     </section>
 </section>
-</div>
