--- a/templates/portfolio_v3/projects.html
+++ b/templates/portfolio_v3/projects.html
@@ -77,7 +77,7 @@
                             <div class="portfolio-img">
 
                                 <img src="{{ item.imageURL }}" class="img-responsive"
-                                     style="width:391px ;height: 280px"
+                                     style="width:100% ;height: 280px"
                                      alt="Portfolio img">
                                 <!-- * img source -->
 
